--- a/css/style.css
+++ b/css/style.css
@@ -188,11 +188,15 @@ header nav a.active {
 	font-weight: bold;
 }
 
+/********** FOOTER SECTION ***********/
+
 footer {
 	padding: 90px 0;
 	text-align: center;
 	font-size: 18px;
 }
+
+/********** SECTION ***********/
 
 section {
 	padding: 80px 0;
@@ -203,6 +207,8 @@ section h2 {
 	text-align: center;
 	margin-bottom: 80px;
 }
+
+/********** CONTAINER ***********/
 
 .container {
 	width: 992px;
