--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../images/background.jpg') no-repeat center top;
 	background-size: cover;
 	color: white;
+	text-align: center;
 }
 
 /* Header */
@@ -25,7 +26,6 @@ header {
 header .nav-container {
 	display: flex;
 	flex-direction: column;
-	text-align: center;
 }
 
 header img {
@@ -54,18 +54,14 @@ header nav a.active {
 #home {
 	display: flex;
 	flex-direction: column;
-	align-content: space-between;
-	text-align: center;
-	/* padding: 200px 0 150px; */
-	padding: 100px 0 50px;
+	align-content: space-around;
+	padding: 140px 0 50px;
 }
 
 #home h1 {
-	/* font-size: 68px; */
-	font-size: 30px;
+	font-size: 34px;
 	font-weight: normal;
 	line-height: 1.2;
-	margin-bottom: 40px;
 }
 
 #home .divider {
@@ -75,9 +71,7 @@ header nav a.active {
 }
 
 #home p {
-	/* font-size: 24px; */
 	font-size: 18px;
-	margin-top: 40px;
 }
 
 #home .social {
