--- a/css/responsive.css
+++ b/css/responsive.css
@@ -55,5 +55,11 @@
         margin-top: 40px;
     }
 
-    
+    #home .social a {
+        margin-left: 5px;
+        font-size: 24px;
+        height: 50px;
+        width: 50px;
+        line-height: 50px;
+    }    
 }
