--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,14 @@ header {
 	width: 100%;
 }
 
+header .nav-container {
+	padding: 0;
+}
+
+header img {
+	width: 150px;
+}
+
 header nav {
 	display: flex;
 	justify-content: space-around;
@@ -31,9 +39,6 @@ header nav a {
 	text-decoration: none;
 }
 
-header nav a.active {
-	color: black;
-}
 
 /* Home */
 
