--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,6 +28,12 @@
     header nav a.active {
         color: black;
     }
+
+    /* Home */
+
+    #home h1 {
+       display: none;
+    }
 }
 
 @media screen and (min-width: 480px) {
@@ -77,7 +83,6 @@
     }
 
     #home h1 {
-        display: inline;
         font-size: 68px;
         margin-bottom: 40px;
     }
