--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,12 @@ body {
 /* Header */
 
 header {
+	background-color: #00FF7F;
 	width: 100%;
 }
 
 header .nav-container {
 	padding: 0;
-}
-
-header img {
-	width: 150px;
 }
 
 header nav {
@@ -47,12 +44,6 @@ header nav a {
 	flex-direction: column;
 	align-content: space-around;
 	padding: 140px 20px 50px;
-}
-
-#home h1 {
-	font-size: 34px;
-	font-weight: normal;
-	line-height: 1.2;
 }
 
 #home .divider {
@@ -111,8 +102,6 @@ header nav a {
 }
 
 #video .video-size {
-	/* width: 640px; 
-	height: 360px; */
 	width: 360px;
 	height: 315px;
 }
@@ -199,20 +188,11 @@ footer {
 /********** SECTION ***********/
 
 section {
-	/* padding: 80px 0; */
 	padding: 40px 0;
 }
 
 section h2 {
-	/* font-size: 32px; */
 	font-size: 25px;
 	text-align: center;
-	/* margin-bottom: 80px; */
 	margin-bottom: 40px;
-}
-
-/********** CONTAINER ***********/
-
-.container {
-	padding: 0 20px;
 }
