--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,7 @@
 @media (max-width: 682px) {
-    /* Home */
-
-    #home h1 {
-       display: none;
+    
+    header img {
+        display: none;
     }
 
     /********** CONTAINER ***********/
@@ -13,12 +12,6 @@
 }
 
 @media (min-width: 481px) and (max-width: 681px) {
-    /* Header */
-
-    header img {
-        width: 180px;
-    }
-
     /********** PORTFOLIO SECTION ***********/
 
     #portfolio .box {
@@ -40,13 +33,9 @@
 @media screen and (min-width: 682px) {
     /* Header */
 
-    header {
-        padding: 10px 0;
-    }
-
     header .nav-container {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
     }
 
@@ -59,13 +48,6 @@
         padding: 7px 15px;
         margin-left: 10px;
     }
-
-    header nav a.active {
-        color: white;
-        background: #00FF7F;
-        border-radius: 3px;
-    }  
-
 
     /* Home */
 
@@ -134,6 +116,12 @@
 }
 
 @media screen and (min-width: 1024px) {
+    /* Header */
+
+    header .nav-container {
+        justify-content: space-between;
+    }
+
     /********** SECTION ***********/
 
     section {
