--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,5 @@
 @media (max-width: 682px) {
-    
+
     header img {
         display: none;
     }
@@ -31,6 +31,10 @@
 }
 
 @media screen and (min-width: 682px) {
+    body {
+        font-size: 16px;
+    }
+
     /* Header */
 
     header .nav-container {
